@@ -102,6 +102,24 @@ class digraph (object):
             yield each
 
 
+    def __eq__(self, other):
+        """
+        Compare two digraphs.
+        
+        @type other: graph 
+        @param other: Other digraph.
+        
+        @rtype: bool
+        @return: Whether the digraphs are equal.
+        """
+        return (type(self) == type(other)
+                and self.node_incidence == other.node_incidence
+                and self.node_neighbors == other.node_neighbors
+                and self.node_attr == other.node_attr
+                and self.edge_properties == other.edge_properties
+                and self.edge_attr == other.edge_attr)
+    
+    
     def generate(self, num_nodes, num_edges, weight_range=(1, 1)):
         """
         Add nodes and random edges to the graph.
